[workspace]
members = ["access-grid"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.1" }
tokio = { version = "1.43.0", default-features = false }
sqlx = { version = "0.8.3", default-features = false }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
tower-http = { version = "0.6.2" }
uuid = { version = "1.13.1" }
chrono = { version = "0.4.39" }
reqwest = { version = "0.12.12" }
openidconnect = { version = "4.0.0" }
